# multi_agent_for_education_app

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  verify_neo4j.py
accounts/: models.py
accounts/migrations/: 0001_initial.py
agents/: urls.py  views.py
agents/templates/agents/: chat.html
ingest/: enums.py  models.py  tasks.py  urls.py  views.py
ingest/migrations/: 0001_initial.py
ingest/services/parsers/: dual_parser.py
ingest/templates/ingest/: task_detail.html  task_list.html  upload.html
knowledge/: urls.py  views.py
knowledge/services/: __init__.py  loader.py
knowledge/templates/knowledge/: graph.html
multi_agent_for_education_app/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
utils/: __init__.py  models.py
