[project]
name = "multi_agent_for_education_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.1",
    "django-daisy>=2.0.7",
    "django-huey>=1.3.1",
    "django-neomodel>=0.2.0",
    "fitz>=0.0.1.dev2",
    "google-genai>=1.59.0",
    "neo4j>=5.19.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "retry>=0.9.2",
]

[dependency-groups]
dev = ["black>=25.12.0", "isort>=7.0.0"]

[tool.black]
# Exclude 'repositories' folder and 'migrations' directories
extend-exclude = "repositories|migrations|\\.venv"

[tool.isort]
profile = "black"
skip = ["repositories", ".venv"]
skip_glob = ["**/migrations/*"]
